external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/struct_method_invalid_autocomplete.exp
error[E04023]: invalid method call
   ┌─ tests/move_2024/ide_mode/struct_method_invalid_autocomplete.move:18:21
   │
18 │         let _tmp1 = _a.t7();
   │                     ^^^^^^^
   │                     │  │
   │                     │  No local 'use fun' alias was found for 'a::m::A.t7', and no function 't7' was found in the defining module 'a::m'
   │                     Invalid method call. No known method 't7' on type 'a::m::A'

error[E04023]: invalid method call
   ┌─ tests/move_2024/ide_mode/struct_method_invalid_autocomplete.move:19:21
   │
19 │         let _tmp2 = _b.t8();
   │                     ^^^^^^^
   │                     │  │
   │                     │  No local 'use fun' alias was found for 'a::m::B.t8', and no function 't8' was found in the defining module 'a::m'
   │                     Invalid method call. No known method 't8' on type 'a::m::B'

